<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".display.SubmitActivity">


    <TextView
        android:id="@+id/project_submission"
        style="@style/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_submission"
        android:textColor="@color/colorSubmit"
        app:layout_constraintBottom_toTopOf="@+id/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/divider"
        android:fadingEdgeLength="10dp"
        android:requiresFadingEdge="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/last_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_submission"
        app:layout_constraintVertical_bias="0.076" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@color/colorSubmit"
        android:backgroundTint="@color/colorSubmit"
        android:text="@string/submit"
        android:textColor="@color/design_default_color_background"
        android:textSize="24sp"
        app:cornerRadius="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/github_link" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/first_name"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="@string/first_name"
        android:background="@color/design_default_color_background"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/email_adress"
        app:layout_constraintEnd_toStartOf="@+id/last_name"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.835" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/last_name"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/last_name"
        android:background="@color/design_default_color_background"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/first_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/github_link"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/project_on_github_link"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/project_on_github_link"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_adress"
        style="@style/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/email_address"
        android:background="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/github_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.884" />
</androidx.constraintlayout.widget.ConstraintLayout>